--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <style>
 body{text-align:center}
 .container{margin:0 auto;width:400px;height:100px;border:1px solid #000}
-/* CSS注释：设置对象边框、宽度、高度 便于观察布局效果 */
 </style>
 
     <link href="/assets/css/style.css?v=e8bb831c9a06b5787af1fb0dafd9cc4b23768456" rel="stylesheet">
@@ -17,7 +16,7 @@ body{text-align:center}
       <h2 id="welcome-to-kingdaycom">Welcome to KingDay.com</h2>
 
 <p>The Domain you visit is for sale!
-  您访问的域名可能出售或转让11111111！</p>
+  您访问的域名可能出售或转让！</p>
 
 <p>connect me:
 联系方式</p>
