--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Welcome to KingDay.com</title>
     <style>
 body{text-align:center}
-.container{margin:0 auto;width:400px;height:100px;border:1px solid #000}
+.container{margin:0 auto;width:400px;height:100px}
 </style>
 
     <link href="/assets/css/style.css?v=e8bb831c9a06b5787af1fb0dafd9cc4b23768456" rel="stylesheet">
