--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Welcome to KingDay.com</title>
     <style>
-body{text-align:center}
-.container{margin:0 auto;width:400px;height:100px}
-</style>
+  body{text-align:center}
+  .container{margin:0 auto;width:400px;height:100px;border:1px solid #000}
+ -/* CSS注释：设置对象边框、宽度、高度 便于观察布局效果 */
+  </style>
 
     <link href="/assets/css/style.css?v=e8bb831c9a06b5787af1fb0dafd9cc4b23768456" rel="stylesheet">
   </head>
