--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Welcome to KingDay.com</title>
     <style>
   body{text-align:center}
-  .container{margin:0 auto;width:400px;height:100px;border:0px solid #000}
+  .container{margin:0 auto;width:400px;height:100px;border:1px solid #000}
  -/* CSS注释：设置对象边框、宽度、高度 便于观察布局效果 */
   </style>
 
@@ -22,7 +22,7 @@
 <p>connect me:
 联系方式</p>
 
-<p>e-mail:arvinow@gmail.com</p>
+<p>e-mail:<a href="mailto:arvinow@gmail.com">arvinow@gmail.com</a></p>
 
 <p>tel:18688207521</p>
 
