--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <div class="container">
       <h2 id="welcome-to-kingdaycom">Welcome to KingDay.com</h2>
 
-<p>The Domain you visit is for sale!
-  您访问的域名可能出售或转让！</p>
+      <p>The Domain you visit is for sale!</p>
+  <p>您访问的域名可能出售或转让！</p>
 
-<p>connect me:
-联系方式</p>
+<p>connect me:</p>
+<p>联系方式</p>
 
 <p>e-mail:<a href="mailto:arvinow@gmail.com">arvinow@gmail.com</a></p>
 
