--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <p>connect me:</p>
 <p>联系方式</p>
 
-<p>e-mail:<a href="mailto:arvinow@gmail.com">arvinow@gmail.com</a></p>
+<p>e-mail:arvinow@gmail.com</p>
 
 <p>tel:18688207521</p>
 
