--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <link href="/assets/css/style.css?v=e8bb831c9a06b5787af1fb0dafd9cc4b23768456" rel="stylesheet">
   </head>
-  <body bgcolor="#000000">
+  <body background="http://www.w3school.com.cn/clouds.gif">
     <div class="container">
       <h2 id="welcome-to-kingdaycom">Welcome to KingDay.com</h2>
 
