--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Welcome to KingDay.com</title>
     <style>
-  body{text-align:center}
+  body{text-align:center; background-color: #FFC1C1;}
   .container{margin:0 auto;width:400px;height:100px;border:0px solid #000}
  -/* CSS注释：设置对象边框、宽度、高度 便于观察布局效果 */
   </style>
