--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <link href="/assets/css/style.css?v=e8bb831c9a06b5787af1fb0dafd9cc4b23768456" rel="stylesheet">
   </head>
-  <body style="background-image:url(http://pic4.nipic.com/20090821/2267807_180803075_2.jpg);" >
+  <body style="background-image:url(http://pic.pptbz.com/pptpic/201503/2015031815200293.jpg);" >
     <div class="container">
       <h2 id="welcome-to-kingdaycom">Welcome to KingDay.com</h2>
 
