--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Welcome to KingDay.com</title>
     <style>
   body{text-align:center; background-color: #FFC1C1;}
-  .container{margin:0 auto;width:400px;height:100px;border:0px solid #000}
+  .container{margin:100px auto;width:400px;height:200px;border:0px solid #000}
  -/* CSS注释：设置对象边框、宽度、高度 便于观察布局效果 */
   </style>
 
