联系方式修改

--- a/index.html
+++ b/index.html
@@ -19,12 +19,15 @@
       <p>The Domain you visit is for sale!</p>
   <p>您访问的域名可能出售或转让！</p>
 
-<p>connect me : </p>
+<p>Connect Info : </p>
 <p>联系方式</p>
 
-<p>e-mail : arvinow@gmail.com</p>
+ <p>Name : Arvin Pan</p>
+ <p>姓名 : 潘先生</p>
+      
+<p>E-mail : arvinow@gmail.com</p>
 
-<p>tel : 18688207521</p>
+<p>Tel : 18688207521</p>
 
 <p>QQ : 993035696</p>
 
