--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <meta name="baidu-site-verification" content="EHijKcTzWI" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Welcome to KingDay.com</title>
     <style>
