--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="baidu-site-verification" content="EHijKcTzWI" />
     <title>Welcome to KingDay.com</title>
     <style>
-  body{text-align:center; background-color: #FFC1C1;}
+  body{text-align:center; background-color: #750075;}
   .container{margin:100px auto;width:400px;height:200px;border:0px solid #000}
   </style>
 
     <link href="/assets/css/style.css?v=e8bb831c9a06b5787af1fb0dafd9cc4b23768456" rel="stylesheet">
   </head>
-  <body bgcolor="#C0C0C0">
+  <body bgcolor="#750075">
     <div class="container">
       <h2 id="welcome-to-kingdaycom">Welcome to KingDay.com</h2>
 
