--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <link href="/assets/css/style.css?v=e8bb831c9a06b5787af1fb0dafd9cc4b23768456" rel="stylesheet">
   </head>
-  <body bgcolor="#750075">
+  <body style="background-image:url(http://pic.pptbz.com/pptpic/201505/2015052715025345.jpg);">
     <div class="container">
       <h2 id="welcome-to-kingdaycom">Welcome to KingDay.com</h2>
 
