--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body style="background-image:url(http://pic.pptbz.com/pptpic/201505/2015052715025345.jpg);">
     <div class="container">
-      <h2 id="welcome-to-kingdaycom">Welcome to KingDay.com</h2>
+      <h2 id="welcome">Welcome</h2>
 
       <p>The Domain you visit is for sale!</p>
   <p>您访问的域名可能出售或转让！</p>
@@ -30,6 +30,7 @@
 
 <p>QQ : 993035696</p>
 
+      <p>陪伴是最长情的告白,相守是最浪漫的承诺, 此梦一生,此生一梦</p>
     </div>
   </body>
 </html>
