--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   </head>
   <body style="background-image:url(http://pic.pptbz.com/pptpic/201505/2015052715025345.jpg);">
     <div class="container">
-      <h2 id="welcome">Welcome！！！</h2>
+      <h2 id="welcome">Welcome ! ! !</h2>
 
-      <p>The Domain you visit is for sale!</p>
+      <p>The Domain you visit may be for sale!</p>
   <p>您访问的域名可能出售或转让！</p>
 
 <p>Connect Info : </p>
