--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <link href="/assets/css/style.css?v=e8bb831c9a06b5787af1fb0dafd9cc4b23768456" rel="stylesheet">
   </head>
-  <body style="background-image:url(http://pic.pptbz.com/pptpic/201505/2015052715025345.jpg);">
+  <body bgcolor="#000000">
     <div class="container">
       <h2 id="welcome">Welcome ! ! !</h2>
 
@@ -29,8 +29,8 @@
 <p>Tel : 18688207521</p>
 
 <p>QQ : 993035696</p>
-
-      <p>陪伴是最长情的告白,相守是最浪漫的承诺, 此梦一生,此生一梦</p>
+      
+ <p>陪伴是最长情的告白,相守是最浪漫的承诺, 此梦一生,此生一梦</p>
     </div>
   </body>
 </html>
