--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
     <link href="/assets/css/style.css?v=e8bb831c9a06b5787af1fb0dafd9cc4b23768456" rel="stylesheet">
   </head>
-  <body bgcolor="#000000">
+  <body style="background-image:url(http://pic.pptbz.com/pptpic/201505/2015052715025345.jpg);">
     <div class="container">
       <h2 id="welcome">Welcome ! ! !</h2>
-
+<h3>陪伴是最长情的告白,相守是最浪漫的承诺, 此梦一生,此生一梦</h3>
       <p>The Domain you visit may be for sale!</p>
   <p>您访问的域名可能出售或转让！</p>
 
@@ -30,7 +30,6 @@
 
 <p>QQ : 993035696</p>
       
- <p>陪伴是最长情的告白,相守是最浪漫的承诺, 此梦一生,此生一梦</p>
     </div>
   </body>
 </html>
