--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   </head>
   <body style="background-image:url(http://pic.pptbz.com/pptpic/201505/2015052715025345.jpg);">
     <div class="container">
-      <h2 id="welcome">Welcome ! ! !</h2>
-<h3>陪伴是最长情的告白,相守是最浪漫的承诺, 此梦一生,此生一梦</h3>
+      <h1 id="welcome">Welcome ! ! !</h1>
+<h3>陪伴是最长情的告白,相守是最浪漫的承诺</h3>
       <p>The Domain you visit may be for sale!</p>
   <p>您访问的域名可能出售或转让！</p>
 
