--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <p>QQ : 993035696</p>
       
-      <h4>陪伴是最长情的告白,相守是最浪漫的承诺</h4>
+      <p>陪伴是最长情的告白,相守是最浪漫的承诺</p>
     </div>
   </body>
 </html>
