--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <link href="/assets/css/style.css?v=e8bb831c9a06b5787af1fb0dafd9cc4b23768456" rel="stylesheet">
   </head>
-  <body style="background-image:url(http://pic.pptbz.com/pptpic/201505/2015052715025345.jpg);">
+  <body>
     <div class="container">
       <h1 id="welcome">Welcome ! ! !</h1>
       <p>The Domain you visit may be for sale!</p>
