--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>Welcome to KingDay.com</title>
     <style>
   body{text-align:center; background-color: #000000;}
-  .container{margin:100px auto;width:400px;color:#FFFFFF;height:200px;border:0px solid #000}
+  .container{margin:100px auto;width:400px;height:200px;border:0px solid #000}
   </style>
 
     <link href="/assets/css/style.css?v=e8bb831c9a06b5787af1fb0dafd9cc4b23768456" rel="stylesheet">
   </head>
-  <body>
+  <body  style="background-image:url(http://pic.pptbz.com/pptpic/201505/2015052715025345.jpg);">
     <div class="container">
       <h1 id="welcome">Welcome ! ! !</h1>
       <p>The Domain you visit may be for sale!</p>
