--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="baidu-site-verification" content="EHijKcTzWI" />
-    <title>欢迎光临个人博客</title>
+    <title>欢迎光临</title>
     <style>
   body{text-align:center; background-color: #000000;}
   .container{margin:100px auto;width:400px;height:200px;border:0px solid #000}
@@ -18,7 +18,7 @@
       <br>
       <br>
       <p>枯藤老树昏鸦，</p>
-<p>小桥流水人家，</p>
+      <p>小桥流水人家，</p>
       <p>古道西风瘦马。</p>
       <p>夕阳西下，</p>
       <p>断肠人在天涯。</p>
