--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
  <p>Name : Arvin Pan</p>
  <p>姓名 : 潘先生</p>
       
-<p>E-mail : isyuqi@gmail.com</p>
+<p><strong>E-mail : isyuqi@gmail.com</strong></p>
     </div>
   </body>
 </html>
