--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
  <p>Name : Arvin Pan</p>
  <p>姓名 : 潘先生</p>
-      
+  <p><strong>TEL : +86 18688207521</strong></p>    
 <p><strong>E-mail : isyuqi@gmail.com</strong></p>
     </div>
   </body>
