--- a/index.html
+++ b/index.html
@@ -29,11 +29,7 @@
       <br>
       <br>
       <br>
-<p>Connect Info : </p>
-<p>联系方式:</p>
-
- <p>Name : Arvin Pan</p>
- <p>姓名 : 潘先生</p>
+<p>Connect Me : </p>
   <p><strong>TEL : +86 18688207521</strong></p>    
 <p><strong>E-mail : isyuqi@gmail.com</strong></p>
     </div>
