--- a/index.html
+++ b/index.html
@@ -33,5 +33,6 @@
   <p><strong>TEL : +86 18688207521</strong></p>    
 <p><strong>E-mail : isyuqi@gmail.com</strong></p>
     </div>
+    <div style="width: 100%; margin: 0 auto; text-align:center;padding-top:20px;">Copyright &copy; KingDay.com</div>
   </body>
 </html>
