--- a/index.html
+++ b/index.html
@@ -32,7 +32,19 @@
 <p>Connect Me : </p>
   <p><strong>TEL : +86 18688207521</strong></p>    
 <p><strong>E-mail : isyuqi@gmail.com</strong></p>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <p><strong>Copyright &copy; KingDay.com</strong></p>
     </div>
-    <div style="width: 100%; margin: 0 auto; text-align:center;padding-top:1px;">Copyright &copy; KingDay.com</div>
   </body>
 </html>
