--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <br>
       <br>
       <br>
-      <p><strong>Copyright &copy; KingDay.com</strong></p>
+      <p><strong>Copyright &copy; KingDay.com  All Rights Reserved</strong></p>
     </div>
   </body>
 </html>
