--- a/index.html
+++ b/index.html
@@ -11,27 +11,18 @@
 
     <link href="/assets/css/style.css?v=e8bb831c9a06b5787af1fb0dafd9cc4b23768456" rel="stylesheet">
   </head>
-  <body  style="background-image:url(http://pic.pptbz.com/pptpic/201505/2015052715025345.jpg);">
+  <body  style="background-image:url(http://img.juimg.com/tuku/yulantu/131019/328814-131019162P843.jpg);">
     <div class="container">
-      <h1 id="welcome">《天净沙·秋思》</h1>
-      <p>马致远</p>
-      <br>
-      <br>
-      <p>枯藤老树昏鸦，</p>
-      <p>小桥流水人家，</p>
-      <p>古道西风瘦马。</p>
-      <p>夕阳西下，</p>
-      <p>断肠人在天涯。</p>
+      <h1>网站维护中，稍后开启。</h1>
       <br>
       <br>
       <br>
       <br>
       <br>
       <br>
-      <br>
-<p>Connect Me : </p>
-  <p><strong>TEL : +86 18688207521</strong></p>    
-<p><strong>E-mail : isyuqi@gmail.com</strong></p>
+<h2>联系信息 : </h2>
+  <h3><strong>TEL : +86 18688207521</strong></h3>    
+<h3><strong>E-mail : isyuqi@gmail.com</strong></h3>
     </div>
   </body>
 </html>
