--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="baidu-site-verification" content="EHijKcTzWI" />
-    <title>欢迎光临</title>
+    <title>网站维护中</title>
     <style>
   body{text-align:center; background-color: #000000;}
   .container{margin:100px auto;width:400px;height:200px;border:0px solid #000}
