--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="baidu-site-verification" content="EHijKcTzWI" />
+
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html>
+<head>
+	<meta charset="utf-8"/>
     <title>网站维护中</title>
     <style>
-  body{text-align:center; background-color: #000000;}
-  .container{margin:0 auto;width:1000px;height:700px;border:0px solid #000}
-  </style>
-
-    <link href="/assets/css/style.css?v=e8bb831c9a06b5787af1fb0dafd9cc4b23768456" rel="stylesheet">
-  </head>
-  <body  style="background-image:url(http://img.juimg.com/tuku/yulantu/131019/328814-131019162P843.jpg);">
-    <div class="container">
-      <h1>网站维护中，稍后开启。</h1>
+        .cc{ margin:0 auto; width: 1000px;  height:700px;background-image: url("http://img.juimg.com/tuku/yulantu/131019/328814-131019162P843.jpg"); margin:0px auto; text-align:center; font-size:36px}
+        .pl{padding-left: 38px;}
+        p{font-weight: bolder}
+    </style>
+</head>
+<body >
+<div class="cc">
+  <h1>网站维护中，稍后开启。</h1>
       <br>
       <br>
       <br>
@@ -23,6 +22,7 @@
 <h2>联系信息 : </h2>
   <h3><strong>TEL : +86 18688207521</strong></h3>    
 <h3><strong>E-mail : isyuqi@gmail.com</strong></h3>
-    </div>
-  </body>
+</div>
+</body>
 </html>
+
