--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
 </head>
 <body >
 <div class="cc">
-  <h1>网站维护中，稍后开启。</h1>
+  <p>网站维护中，稍后开启。</p>
       <br>
       <br>
       <br>
       <br>
       <br>
       <br>
-<h2>联系信息 : </h2>
-  <h3><strong>TEL : +86 18688207521</strong></h3>    
-<h3><strong>E-mail : isyuqi@gmail.com</strong></h3>
+<p>联系信息 : </p>
+  <p><strong>TEL : +86 18688207521</strong></p>    
+<p><strong>E-mail : isyuqi@gmail.com</strong></p>
 </div>
 </body>
 </html>
