--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 	<meta charset="utf-8"/>
-    <title>网站维护中</title>
+    <title>网站升级中</title>
     <style>
         .cc{ margin:0 auto; width: 1000px;  height:700px;background-image: url("http://img.juimg.com/tuku/yulantu/131019/328814-131019162P843.jpg"); margin:0px auto; text-align:center; font-size:36px}
         .pl{padding-left: 38px;}
@@ -12,7 +12,7 @@
 </head>
 <body >
 <div class="cc">
-  <p>网站维护中，敬请期待。。。</p>
+  <p>网站升级中，敬请期待。。。</p>
       <br>
       <br>
       <br>
