--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 	<meta charset="utf-8"/>
-    <title>网站升级中</title>
+    <title>建设中</title>
     <style>
         .cc{ margin:0 auto; width: 1000px;  height:700px;background-image: url("http://img.juimg.com/tuku/yulantu/131019/328814-131019162P843.jpg"); margin:0px auto; text-align:center; font-size:36px}
         .pl{padding-left: 38px;}
@@ -12,13 +12,14 @@
 </head>
 <body >
 <div class="cc">
-  <p>网站升级中，敬请期待。。。</p>
+<p>Under Construction</p>
+  <p>网站建设中。。。</p>
       <br>
       <br>
       <br>
 <p>联系信息 : </p>
   <p><strong>TEL : +86 18688207521</strong></p>    
-<p><strong>E-mail : isyuqi@gmail.com</strong></p>
+<p><strong>E-mail : <a href="mailto:isyuqi@gmail.com">isyuqi@gmail.com</a></strong></p>
 <a target="_blank" href="http://sighttp.qq.com/authd?IDKEY=a8b576cad87ede40d4201de109cc1dfee28c7e6923102ceb"><img border="0"  src="http://wpa.qq.com/imgd?IDKEY=a8b576cad87ede40d4201de109cc1dfee28c7e6923102ceb&pic=51" alt="QQ联系" title="QQ联系"/></a>
 </div>
 <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1261562148'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s4.cnzz.com/z_stat.php%3Fid%3D1261562148%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));</script>		
