--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body >
 <div class="cc">
 <p>Under Construction</p>
-  <p>网站建设中。。。</p>
+  <p>网站建设中,敬请期待。。。</p>
       <br>
       <br>
       <br>
