--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
 	<meta charset="utf-8"/>
     <title>建设中</title>
-    <style>
-        .cc{ margin:0 auto; width: 100%;  height:100%;background-image: url("http://img.juimg.com/tuku/yulantu/131019/328814-131019162P843.jpg"); margin:0px auto; text-align:center; font-size:36px}
+     <style>
+        .cc{ margin:0 auto; width: 1000px;  height:650px;background-image: url("http://img.juimg.com/tuku/yulantu/131019/328814-131019162P843.jpg"); margin:0px auto; text-align:center; font-size:36px}
         .pl{padding-left: 38px;}
         p{font-weight: bolder}
     </style>
