--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
 	<meta charset="utf-8"/>
     <title>建设中</title>
      <style>
-        .cc{ margin:0 auto; width: 1000px;  height:650px;background-image: url("http://pic.pptbz.com/pptpic/201505/2015052715025345.jpg"); margin:0px auto; text-align:center; font-size:36px}
-        .pl{padding-left: 38px;}
-        p{font-weight: bolder}
-    </style>
+  body{text-align:center; background-color: #000000;}
+  .container{margin:100px auto;width:400px;height:200px;border:0px solid #000}
+  </style>
 </head>
-<body >
+<body style="background-image:url(http://pic.pptbz.com/pptpic/201505/2015052715025345.jpg);">
 <div class="cc">
 <p>Under Construction</p>
   <p>
