--- a/index.html
+++ b/index.html
@@ -16,7 +16,13 @@
 	<span style="font-family:'Microsoft YaHei';font-size:30px;"><b>网站建设中,敬请期待。。。</b></span>
 </p>
 <p>
-	<span style="font-family:'Microsoft YaHei';font-size:15px;">本页面仅为域名持有人解析管理域名以备未来之项目，这里不提供/售卖任何商品及服务。如果您认为您不期而至，建议您重新核对或借助搜索引擎。有任何意见或者建议可以根据以下联系 方式联系 ，谢谢 ！</span>
+	<span>本页面仅为域名持有人解析管理域名以备未来之项目，这里不提供/售卖任何商品及服务。<br>  </span>
+</p>
+	<p>
+	<span>如果您认为您不期而至，建议您重新核对或借助搜索引擎。<br></span>
+</p>
+	<p>
+	<span>有任何意见或者建议可以根据以下联系方式联系 ，谢谢 ！<br></span>
 </p>
 <p>
 	<span style="font-family:'Microsoft YaHei';font-size:15px;">TEL : +86 18688207521</span>
