--- a/index.html
+++ b/index.html
@@ -11,25 +11,43 @@
 </head>
 <body style="background-image:url(http://pic.pptbz.com/pptpic/201505/2015052715025345.jpg);">
 <div class="cc">
-<p>Under Construction</p>
-  <p>
-	<span style="font-family:'Microsoft YaHei';font-size:30px;"><b>网站建设中,敬请期待。。。</b></span>
-</p>
 <p>
-	<span>本页面仅为域名持有人解析管理域名以备未来之项目，这里不提供/售卖任何商品及服务。<br>  </span>
-</p>
-	<p>
-	<span>如果您认为您不期而至，建议您重新核对或借助搜索引擎。<br></span>
-</p>
-	<p>
-	<span>有任何意见或者建议可以根据以下联系方式联系 ，谢谢 ！<br></span>
-</p>
+
+
+添加 微信/QQ:993035696 或者 e-mail: isyuqi@gmail.com联系 网站所有人 
 <p>
-	<span style="font-family:'Microsoft YaHei';font-size:15px;">TEL : +86 18688207521</span>
-</p>
+ 此域名为私人注册所有并正积极为未来运营而规划
+  <br>
+  Registered and Owned by an individual and being actively planned for future web operation.</p>
+
+<h3>声明</h3>
+
 <p>
-	<span style="font-family:'Microsoft YaHei';font-size:15px;">E-mail : <a href="mailto:isyuqi@gmail.com">isyuqi@gmail.com</a></span>
-</p>
+此域名为通用词汇，并为非商业性、独立的私人且个人所有，域名本身及其所有人与任何公司、组织、商标无关 
+
+本页面仅为域名持有人解析管理域名以备未来之项目，这里从不提供/售卖任何商品或服务 
+
+如果您认为您不期而至，建议您重新核对或借助搜索引擎 
+
+因工作量目前尚无法确定网站的对外发布时间，请稍后访问 
+
+进度更新：Email已投入使用，网站尚内部测试中，无法对外服务。请稍后访问，以获得可能的更新 
+
+小心不良“中介”/“代理”，侵损你的利益</p>
+<h3>Disclaimer</h3>
+<p>It is a general-term, non-commercial and private & personal domain, the domain itself and its owner is not connected or affiliated with any company, organization or trademark. 
+
+It does not offer/sell any commodities or services. 
+
+If you think your arrival is unexpected, please recheck or use search engines. 
+
+Email service is set up and running, while web service is for internal test only.
+
+Please come back later, for any possible update.</p>
+
+
+<h3>&nbsp;</h3>
+
 </div>
 <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1261562148'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s4.cnzz.com/z_stat.php%3Fid%3D1261562148%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));</script>		
 </body>
