--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <p>
 
 
-添加 微信/QQ:993035696 或者 e-mail: isyuqi@gmail.com联系 网站所有人 
+添加 微信/QQ:993035696 或者 e-mail: isyuqi@gmail.com联系域名所有人 
 <p>
  此域名为私人注册所有并正积极为未来运营而规划
   <br>
